@@ -16,57 +16,23 @@
  */
 package org.apache.kafka.streams.state.internals;
 
-import org.apache.kafka.common.serialization.Serde;
 import org.apache.kafka.streams.kstream.Windowed;
 import org.apache.kafka.streams.kstream.internals.SessionWindow;
 import org.apache.kafka.streams.state.KeyValueIterator;
-import org.apache.kafka.streams.state.SessionStore;
-import org.apache.kafka.streams.state.Stores;
-import org.junit.Test;
 
-import java.util.Arrays;
-import java.util.HashSet;
+import org.junit.jupiter.api.Test;
 
-import static java.time.Duration.ofMillis;
+import java.util.Set;
+
 import static org.apache.kafka.test.StreamsTestUtils.valuesToSet;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
 
 public class InMemorySessionStoreTest extends AbstractSessionBytesStoreTest {
 
-    private static final String STORE_NAME = "in-memory session store";
-
     @Override
-    <K, V> SessionStore<K, V> buildSessionStore(final long retentionPeriod,
-                                                 final Serde<K> keySerde,
-                                                 final Serde<V> valueSerde) {
-        return Stores.sessionStoreBuilder(
-            Stores.inMemorySessionStore(
-                STORE_NAME,
-                ofMillis(retentionPeriod)),
-            keySerde,
-            valueSerde).build();
-    }
-
-    @Override
-    String getMetricsScope() {
-        return new InMemorySessionBytesStoreSupplier(null, 0).metricsScope();
-    }
-
-    @Test
-    public void shouldRemoveExpired() {
-        sessionStore.put(new Windowed<>("a", new SessionWindow(0, 0)), 1L);
-        sessionStore.put(new Windowed<>("aa", new SessionWindow(0, 10)), 2L);
-        sessionStore.put(new Windowed<>("a", new SessionWindow(10, 20)), 3L);
-
-        // Advance stream time to expire the first record
-        sessionStore.put(new Windowed<>("aa", new SessionWindow(10, RETENTION_PERIOD)), 4L);
-
-        try (final KeyValueIterator<Windowed<String>, Long> iterator =
-            sessionStore.findSessions("a", "b", 0L, Long.MAX_VALUE)
-        ) {
-            assertEquals(valuesToSet(iterator), new HashSet<>(Arrays.asList(2L, 3L, 4L)));
-        }
+    StoreType storeType() {
+        return StoreType.InMemoryStore;
     }
 
     @Test
@@ -81,11 +47,15 @@ public class InMemorySessionStoreTest extends AbstractSessionBytesStoreTest {
         // Advance stream time to expire the first three record
         sessionStore.put(new Windowed<>("aa", new SessionWindow(100, 2 * RETENTION_PERIOD)), 4L);
 
-        assertEquals(valuesToSet(iterator), new HashSet<>(Arrays.asList(1L, 2L, 3L, 4L)));
+        assertEquals(valuesToSet(iterator), Set.of(1L, 2L, 3L, 4L));
         assertFalse(iterator.hasNext());
 
         iterator.close();
-        assertFalse(sessionStore.findSessions("a", "b", 0L, 20L).hasNext());
+
+        try (final KeyValueIterator<Windowed<String>, Long> it =
+             sessionStore.findSessions("a", "b", 0L, 20L)) {
+            assertFalse(it.hasNext());
+        }
     }
 
 }
